<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Japanese</string>
    <string name="menu_settings">Settings</string>
    <string name="lessons">Lessons</string>
    <string name="quizzes">Quizzes</string>
    <string name="dictionary">Dictionary</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="introductory">Introductory Statements</string>
    <string name="greetings">Basic Greetings</string>
    <string name="common">Basic Statements</string>
    <string name="restaurant">Restaurant Phrases</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_home">Home</string>
    <string name="nihongo">日本語</string>
    <string name="title_activity_quizzes">Quizzes</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_introductory">Introductory</string>
    <string name="title_activity_greetings">Greetings</string>
    <string name="title_activity_common">Common</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="menu">Menu</string>
    <string name="goodmorning">Good Morning</string>
    <string name="goodmorningr">Ohayou Gozaimasu</string>
    <string name="goodmorningj">おはようございます</string>
    <string name="goodafternoon">Good Afternoon</string>
    <string name="goodafternoonr">Konnichiwa</string>
    <string name="goodafternoonj">こんにちは</string>
    <string name="goodevening">Good Evening</string>
    <string name="goodeveningr">Konbanwa</string>
    <string name="goodeveningj">こんばんは</string>
    <string name="goodnight">Good Night</string>
    <string name="goodnightr">Oyasumi Nasai</string>
    <string name="goodnightj">お休みなさい</string>
    <string name="hello">Hello (phone)</string>
    <string name="hellor">Moshi Moshi</string>
    <string name="helloj">もしもし</string>
    <string name="goodbye">Goodbye</string>
    <string name="goodbyer">Sayounara</string>
    <string name="goodbyej">さようなら</string>
    <string name="next">next</string>
    <string name="howareyou">How are you?</string>
    <string name="howareyour">O-genki desu ka?</string>
    <string name="howareyouj">お元気ですか</string>
    <string name="excuseme">Excuse me</string>
    <string name="excusemer">Sumimasen</string>
    <string name="excusemej">すみません</string>
    <string name="imfine">I am fine</string>
    <string name="imfiner">Daijoubu desu</string>
    <string name="imfinej">大丈夫です</string>
    <string name="idontunderstand">I do not understand</string>
    <string name="idontunderstandr">Wakarimasen</string>
    <string name="idontunderstandj">分かりません</string>
    <string name="sorry">Sorry</string>
    <string name="sorryr">Gomen Nasai</string>
    <string name="sorryj">ごめんなさい</string>
    <string name="thankyou">Thank you</string>
    <string name="thankyour">Doumo Arigatou Gozaimasu</string>
    <string name="thankyouj">どうもありがとうございます</string>
    <string name="yes">Yes</string>
    <string name="yesr">Hai</string>
    <string name="yesj">はい</string>
    <string name="no">No</string>
    <string name="nor">Iie</string>
    <string name="noj">いいえ</string>
    <string name="yourewelcome">You are welcome</string>
    <string name="yourewelcomer">Douitashimashite</string>
    <string name="yourewelcomej">どういたしまして</string>
    <string name="goodluck">Good luck</string>
    <string name="goodluckr">Gambatte Kudasai</string>
    <string name="goodluckj">頑張って下さい</string>
    <string name="happybirthday">Happy Birthday</string>
    <string name="happybirthdayr">O-tanjoubi Omedetou Gozaimasu</string>
    <string name="happybirthdayj">お誕生日おめでとうございます</string>
    <string name="mynameis">My name is</string>
    <string name="mynameisr">Watashi no namae wa</string>
    <string name="mynameisj">私の名前は。。。</string>
    <string name="whatisyourname">What is your name?</string>
    <string name="whatisyournamer">O-namae wa nandesu ka?</string>
    <string name="whatisyournamej">お名前は何ですか？</string>
    <string name="imastudent">I am a student</string>
    <string name="imastudentr">Watashi wa gakusei desu</string>
    <string name="imastudentj">私は学生です</string>
    <string name="thisisapencil">This is a pencil</string>
    <string name="thisisapencilr">Kore wa enpitsu desu</string>
    <string name="thisisapencilj">これは鉛筆です</string>
    <string name="welcome">Welcome</string>
    <string name="welcomer">Irasshaimase</string>
    <string name="welcomej">いらっしゃいませ</string>
    <string name="pleasewait">Please wait</string>
    <string name="pleasewaitr">O-machi kudasai</string>
    <string name="pleasewaitj">お待ちください</string>
    <string name="howmuchisit">How much is it?</string>
    <string name="howmuchisitr">O-ikura desu ka?</string>
    <string name="howmuchisitj">おいくらですか？</string>
    <string name="thisoneplease">This one please</string>
    <string name="thisonepleaser">Kore wo kudasai</string>
    <string name="thisonepleasej">これを下さい</string>
    <string name="letspartake">Let us partake (said before meals)</string>
    <string name="letspartaker">Itadakimasu</string>
    <string name="letspartakej">いただきます</string>
    <string name="thankyouforthemeal">Thank you for the meal</string>
    <string name="thankyouforthemealr">Gochisousama Deshita</string>
    <string name="thankyouforthemealj">ごちそうさまでした</string>
    <string name="cheers">Cheers</string>
    <string name="cheersr">Kanpai</string>
    <string name="cheersj">乾杯</string>
    <string name="secondserving">Second serving</string>
    <string name="secondservingr">O-kawari</string>
    <string name="secondservingj">お代わり</string>
    <string name="title_activity_qtwo">QTwo</string>
    <string name="send">send</string>
    <string name="score">score</string>
    <string name="title_activity_qone">QOne</string>
    <string name="title_activity_qthree">QThree</string>
    <string name="title_activity_qfour">QFour</string>
    <string name="title_activity_qfive">QFive</string>
    <string name="title_activity_qsix">QSix</string>
    <string name="title_activity_qseven">QSeven</string>
    <string name="title_activity_qeight">QEight</string>
    <string name="title_activity_qnine">QNine</string>
    <string name="title_activity_qten">QTen</string>
    <string name="finish">finish</string>
    <string name="start">start</string>

</resources>